# frontend

./: .gitignore  .gitmodules  Cargo.toml  build.rs  index.html  styles.scss  variables.scss
assets/: fontawesomekit.js
src/: apis.rs  app.rs  lib.rs  main.rs  utils.rs
src/components/: mod.rs
src/components/auth/: auth_component.rs  auth_component.scss  mod.rs
src/components/index/: index_component.rs  index_component.scss  mod.rs
src/components/index/new_post/: mod.rs  new_post.scss
src/components/notifier/: mod.rs  notifier.rs  notifier.scss
src/core/: mod.rs  request.rs  router.rs  types.rs
src/shared/: mod.rs
src/shared/input/: input.rs  input_shared.rs  input_shared.scss  mod.rs
src/stores/: auth_store.rs  counter_store.rs  mod.rs  notifier_store.rs  utils_store.rs
src/svgs/: cross.rs  mod.rs
src/views/: auth_view.rs  auth_view.scss  index_view.rs  mod.rs
