[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { version = "0.4" }
gloo-console = "0.2"
wasm-bindgen = "0.2"
time = { version = "0.3", features = ["wasm-bindgen"] }
leptos = { version = "0.2", features = ["csr"]}
leptos_meta = { version = "0.2", features = ["csr"]}
leptos_router = {version = "0.2", features = ["csr"]}
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
tonic = { version = "0.8", default-features = false, features = ["codegen", "prost"]}
prost = "0.11"
tonic-web-wasm-client = "0.3"
web-sys = "0.3"

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost"] }