[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { version = "0.4" }
gloo-console = "0.2"
wasm-bindgen = "0.2"
time = { version = "0.3", features = ["wasm-bindgen"] }
leptos = { version = "0.2", features = ["csr"]}
leptos_meta = { version = "0.2", features = ["csr"]}
leptos_router = {version = "0.2", features = ["csr"]}
console_error_panic_hook = "0.1"
tonic = { version = "0.9", default-features = false, features = ["prost", "codegen"]}
prost = { workspace = true }
tonic-web-wasm-client = { path = "../../third-party/tonic-web-wasm-client" }
users_proto = { path = "../users/proto", features = ["client"] }
js-sys = "0.3"
gloo-net = "0.2.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "EventTarget", 
  "Event", 
  "HtmlDivElement",
  "CssStyleDeclaration",
  "DomTokenList",
  "Element",
  "Navigator",
  "Clipboard",
]


